--- a/_config.yml
+++ b/_config.yml
@@ -67,11 +67,7 @@ awards:
    - awards: Graduate School Physical Sciences Annual Fellowship		     
  
    - institution: The Ohio State University
-   - awards: Undergraduate Research Scholarship recipient for Honors thesis        
-   Dean’s list (x8)
-   Ohio State Provost Scholarship Recipient 				  
-   Krill & Elliot Scholarship Recipient 					   
-   Parker Hannifin Local Scholarship Recipient 				        
+   - awards: Undergraduate Research Scholarship recipient for Honors thesis, Dean’s list (x8), Ohio State Provost Scholarship Recipient, Krill & Elliot Scholarship Recipient, Parker Hannifin Local Scholarship Recipient 				        
 
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
