--- a/_config.yml
+++ b/_config.yml
@@ -79,11 +79,12 @@ awards:
      description: Graduate School Physical Sciences Annual Fellowship		     
  
    - institution: The Ohio State University
-     description: Undergraduate Research Scholarship recipient for Honors thesis 
-    - description: Dean’s list (x8) 
-    - description: Ohio State Provost Scholarship Recipient 
-    - description: Krill & Elliot Scholarship Recipient 
-    - description: Parker Hannifin Local Scholarship Recipient	        
+     description: >   
+                    Undergraduate Research Scholarship recipient for Honors thesis 
+                    Dean’s list (x8) 
+                    Ohio State Provost Scholarship Recipient 
+                    Krill & Elliot Scholarship Recipient 
+                    Parker Hannifin Local Scholarship Recipient	        
 
 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
